# PostNotify

./: .env  Cargo.toml  Notes  README.md  configuration.yaml
scripts/: init_db.sh
src/: configuration.rs  main.rs  startup.rs
src/routes/: subscriptions.rs
test/: health_check.rs
tests/: health_check.rs
