[package]
name = "post_notify"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "PostNotify"

[dependencies]
actix-web = "4.11.0"
chrono = "0.4.41"
config = "0.15.11"
dotenvy = "0.15.7"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.45.0", features = ["full"] }
uuid = { version = "1.16.0", features = ["v4"] }

[dependencies.sqlx]
version = "0.6"
default-features = false
features = [
"runtime-actix-rustls",
"macros",
"postgres",
"uuid",
"chrono",
"migrate"
]

[dev-dependencies]
reqwest = "0.12.15"
